Added profile section to homepage

--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
         .content {
             padding: 20px;
         }
+
+        .profile-section{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 5px;
+        }
+
+        .image-container img{
+            width: 70%;
+            object-fit: cover;
+            border-radius: 5%;
+            padding: 5px;
+        }
+
+        .profile-text{
+            text-align: left;
+            position: relative;
+            bottom: 60px;
+            right: 40px;
+        }
+        
     </style>
 </head>
 <body>
@@ -48,7 +70,20 @@
     </nav>
     <div class="content">
         <section>
-            <p>homepage</p>
+            <section class="profile-section">
+                <div class="image-container">
+                    <img src="./ResumeWebsite/Resume-Website/Assets/profile-image.jpg" alt="Profile Picture" class="profile-image">
+                </div>
+                <div class="profile-text">
+                    <h2>About Me</h2>
+                    <p>Hello! I'm Sammy Elfejji, a passionate developer with experience in various projects, certifications, and work experiences. Welcome to my personal website where you can learn more about my professional journey and get in touch with me.</p>
+                </div>
+            </section>
+            <section class="">
+                <div class="">
+
+                </div>
+            </section>
         </section>
     </div>
 </body>
